[tool.poetry]
name = "quarto"
version = "0.1.0"
description = ""
authors = ["Tyler Vick <vick.tyler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
